--- a/fireclient/sources/main_less/content-wrapper/new-fire-card.less
+++ b/fireclient/sources/main_less/content-wrapper/new-fire-card.less
@@ -109,6 +109,10 @@
     .ui-select-choices-row{
         position: relative !important;
 
+        .ui-select-choices-row-inner{
+            width: 100%;
+        }
+
         /*        .ui-select-choices-row-inner{
                     padding: 0;
 
